fixed top for the nav on tablet view

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -23,6 +23,9 @@
     font-size: 3em;
   }
 
+  nav ul.open {
+    top: 40px;
+  }
   /* body */
 
   body main {
